# claude-power-search

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
evals/: run_evals.sh  test_gather_eval.py
src/power_search/: __init__.py  adaptive.py  base.py  circuit_breaker.py  cli.py  config.py  critic.py  gather.py  gather_cli.py  integrate.py  router.py  tracker.py
src/power_search/providers/: __init__.py  crawl4ai_provider.py  firecrawl.py  gemini.py  jina.py  openai_provider.py  perplexity.py  tavily.py  youtube.py
tests/: test_adaptive.py  test_circuit_breaker.py  test_config.py  test_critic.py  test_router.py  test_telemetry.py  test_tracker.py  test_youtube.py
