[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-search"
version = "0.1.0"
description = "Unified search and AI router with cost tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Calen Walshe" }]
keywords = ["search", "ai", "router", "cost-tracking", "tavily", "perplexity", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "tavily-python>=0.3",
    "openai>=1.0",
]

[project.optional-dependencies]
crawl = ["crawl4ai>=0.8"]
all = ["crawl4ai>=0.8"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
power-search = "power_search.cli:main"

[project.urls]
Homepage = "https://github.com/calenwalshe/claude-power-search"
Repository = "https://github.com/calenwalshe/claude-power-search"

[tool.hatch.build.targets.wheel]
packages = ["src/power_search"]
